# skorpix-experiments

./: .gitmodules  CMakeLists.txt  README.md  build_and_run.sh  watcher.sh
titlebar/: main.cpp
